using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimStrings
{
    internal static string SpeedFloat = "Speed";
    internal static string CommonAttackTrigger = "commonAttack";
    internal static string isWalk = "isWalk";
    internal static string isChase = "isChase";
    internal static string isFollow = "isFollow";
    internal static string isCritical = "isCritical";
    internal static string isDead = "isDead";
    internal static string isWin = "isWin";
    internal static string GetHitTrigger = "getHit";
}
